Backport woes