@@ -5,8 +5,8 @@
  */
 package org.elasticsearch.xpack.core.security.authz;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 public final class AuthorizationServiceField {
 
@@ -16,7 +16,7 @@ public final class AuthorizationServiceField {
 
     // Most often, transient authorisation headers are scoped (i.e. set, read and cleared) for the authorisation and execution
     // of individual actions (i.e. there is a different scope between the parent and the child actions)
-    public static final Collection<String> ACTION_SCOPE_AUTHORIZATION_KEYS = List.of(INDICES_PERMISSIONS_KEY, AUTHORIZATION_INFO_KEY);
+    public static final Collection<String> ACTION_SCOPE_AUTHORIZATION_KEYS = Arrays.asList(INDICES_PERMISSIONS_KEY, AUTHORIZATION_INFO_KEY);
 
     private AuthorizationServiceField() {}
 }
